# zugzwang

./: .gitignore  README.md  default.nix  zugzwang.cabal
app/: Main.hs
src/: Chess.hs
src/Chess/: PortableGameNotation.hs
