cabal-version:      2.4
name:               zugzwang
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nick Reynolds
maintainer:         ndreynolds@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        Chess, 
        Chess.PortableGameNotation

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.15.1.0,
        lens ^>=5.0.1,
        parsec ^>=3.1.0,
        pretty-show ^>=1.10

    hs-source-dirs:   src
    default-language: Haskell2010

executable zugzwang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        zugzwang

    hs-source-dirs:   app
    default-language: Haskell2010
